# flight-data-enrichment-system

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/django_app/dashboard/: apps.py  urls.py  views.py
backend/django_app/dashboard/templates/dashboard/: flights_table.html  last_completed_tasks.html
backend/django_app/django_app/: celery.py  settings.py  urls.py
backend/django_app/flights/: apps.py  models.py  serializers.py  tasks.py
backend/django_app/flights/migrations/: 0001_initial.py  0002_alter_flight_flight_numbers_alter_flight_last_seen_and_more.py  0003_alter_flight_flight_numbers_alter_flight_legs.py
backend/fastapi_app/: main.py  models.py
